# luajit_flecs

./: CMakeLists.txt  README.md  build.bat  main.lua  run.bat  script.lua
include/: flecs_comps.h  flecs_lua.h  flecs_lua_ctypes.h
src/: flecs_comps.c  flecs_lua.c  main.c  test.c  test_init.c
